WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
43113
SVGMaskElement/SVGForeignObjectElement should not inherit from SVGURIReference
https://bugs.webkit.org/show_bug.cgi?id=43113
Summary
SVGMaskElement/SVGForeignObjectElement should not inherit from SVGURIReference
Nikolas Zimmermann
Reported
2010-07-28 04:03:15 PDT
SVGMaskElement/SVGForeignObjectElement inherit from SVGURIReference, and handle the xlink:href attribute, this is not specified and wrong.
Attachments
Patch
(5.76 KB, patch)
2010-07-28 04:05 PDT
,
Nikolas Zimmermann
krit
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Nikolas Zimmermann
Comment 1
2010-07-28 04:05:05 PDT
Created
attachment 62809
[details]
Patch
Dirk Schulze
Comment 2
2010-07-28 04:06:21 PDT
Comment on
attachment 62809
[details]
Patch r=me
Nikolas Zimmermann
Comment 3
2010-07-28 04:09:44 PDT
Landed in
r64197
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug