WebCore/svg/SVGForeignObjectElement.h
@@ -33,8 +33,7 @@ namespace WebCore {
     class SVGForeignObjectElement : public SVGStyledTransformableElement,
                                     public SVGTests,
                                     public SVGLangSpace,
-                                    public SVGExternalResourcesRequired,
-                                    public SVGURIReference {
+                                    public SVGExternalResourcesRequired {
     public:
         SVGForeignObjectElement(const QualifiedName&, Document*);
         virtual ~SVGForeignObjectElement();
